--- a/pom.xml
+++ b/pom.xml
@@ -5,20 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hawolt</groupId>
-    <artifactId>Commandline</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
+    <artifactId>CommandLineInterface</artifactId>
+    <version>1.0</version>
 
 </project>
